# rusty-web

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  requirements.txt
.github/workflows/: deploy-docs.yml
advanced/: index.html
default-limits/: index.html
docs/: README.md  index.md
docs/advanced/: README.md
docs/default-limits/: README.md
search/: search_index.json
src/: lib.rs
src/headers/: mod.rs
src/parser/: mod.rs
src/request/: mod.rs
src/response/: mod.rs
src/status/: mod.rs
