[package]
name = "rusty-web"
version = "0.0.2"
edition = "2021"
authors = ["Tej Magar"]
description = "Rusty Web is a lightweight web framework for rust developers."
license = "MIT"
documentation = "https://tejmagar.github.io/rusty-web/"
repository = "https://github.com/tejmagar/rusty-web/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"

tempfile = "3.10.0"
urlencoding = "2.1.3"

[dev-dependencies]
rand = "0.8.5"
